fix: spacing

--- a/src/view/analysisTools/TaxonomicTree/TaxonDataItemView.css
+++ b/src/view/analysisTools/TaxonomicTree/TaxonDataItemView.css
@@ -14,8 +14,7 @@ span.category.styled {
   margin-bottom: 1px;
 }
 
-span.category.unstyled {
-}
+span.category.unstyled {}
 
 span.simple-value p:first-child {
   display: inline-block;
@@ -107,6 +106,7 @@ span.simple-value h4 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 0.2em;
 }
 
 .data-item-view span.simple-wrapper .image-in-view-wrap {
